--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Notes App</title>
-    <link rel="stylessheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
     <div class="container">
-        <h1>Notes</h1>
-        <button>Create Notes</button>
-
+        <h1><img src="images/notes.png">Notes</h1>
+        <button class="btn"><img src="images/edit.png">Create Notes</button>
+        <div class="notes-container">
+            <!-- <p contenteditable="true" class="input-box">
+               <img src="images/delete.png" alt=""> 
+            </p> -->
+        </div>
     </div>
-    
+    <script src="script.js"></script>
 </body>
 </html>
