--- a/index.html
+++ b/index.html
@@ -8,12 +8,10 @@
 </head>
 <body>
     <div class="container">
-        <h1><img src="images/notes.png">Notes</h1>
-        <button class="btn"><img src="images/edit.png">Create Notes</button>
+        <h1><img src="images/notes.png" alt="Notes Icon"> Notes</h1>
+        <button class="btn"><img src="images/edit.png" alt="Create Note Icon"> Create Notes</button>
         <div class="notes-container">
-            <!-- <p contenteditable="true" class="input-box">
-               <img src="images/delete.png" alt=""> 
-            </p> -->
+            
         </div>
     </div>
     <script src="script.js"></script>
